# rsm-desopt

./: LICENSE  README.md  pyproject.toml
examples/: 00_quickstart.py
rsm-desopt/: .gitignore  README.md
rsm-desopt/.github/workflows/: ci.yml
rsm-desopt/rsm_desopt/: desirability_opt.py
rsm_desopt/: __init__.py  diagnostics.py
tests/: test_desirability_value.py  test_imports.py
